--- a/src/assets/i18n/En.json
+++ b/src/assets/i18n/En.json
@@ -4,5 +4,7 @@
     "header.logOut.text": "Log out from account",
     "loginForm.header.text": "Log in with the social networks",
     "filtersForm.header.text": "Choose the details of your journey",
-    "footer.info.text": "Copyright. All rights reserved"
+    "footer.info.text": "Copyright. All rights reserved",
+    "filters.duration.header.text": "Date of travel",
+    "filters.duration.placeholder.text": "Choose a date"
 }
