Translated, fixed some errors

--- a/src/assets/i18n/En.json
+++ b/src/assets/i18n/En.json
@@ -10,6 +10,9 @@
     "loginForm.header.text": "Log in with the social networks",
     "filtersForm.header.text": "Choose the details of your journey",
     "footer.info.text": "Copyright. All rights reserved",
+    "filters.type.header.text": "Type of the trip",
+    "filters.type.business.text": "Business",
+    "filters.type.leisure.text": "Leisure",
     "filters.duration.header.text": "Date of travel",
     "filters.duration.placeholder.text": "Choose a date",
     "weather.display.temperature.text": "Projected temperature:",
