--- a/src/assets/i18n/Ua.json
+++ b/src/assets/i18n/Ua.json
@@ -10,6 +10,9 @@
     "login.header.text": "Увійти з допомогою соціальних мереж",
     "filtersForm.header.text": "Виберіть деталі своєї подорожі",
     "footer.info.text": "Copyright. Всі права збережено",
+    "filters.type.header.text": "Тип поїздки",
+    "filters.type.business.text": "Бізнес",
+    "filters.type.leisure.text": "Відпочинок",
     "filters.duration.header.text": "Дата подорожі",
     "filters.duration.placeholder.text": "Оберіть дату",
     "weather.display.temperature.text": "Прогнозована температура:",
