--- a/src/assets/i18n/Ua.json
+++ b/src/assets/i18n/Ua.json
@@ -16,5 +16,6 @@
     "filters.duration.header.text": "Дата подорожі",
     "filters.duration.placeholder.text": "Оберіть дату",
     "weather.display.temperature.text": "Прогнозована температура:",
-    "weather.display.precip.text": "Тип опадів:"
+    "weather.display.summary.text": "Прогнозована погода:",
+    "weather.display.location.text": "Місцевість:"
 }
