Auth page styling

--- a/src/assets/i18n/En.json
+++ b/src/assets/i18n/En.json
@@ -4,6 +4,10 @@
     "auth.body.facebook.text": "Sign in with FACEBOOK",
     "auth.body.google.text": "Sign in with GOOGLE",
     "auth.body.guest.text": "Sign in as a Guest",
+    "auth.section.article-one.text": "Choose who exactly is going on a trip",
+    "auth.section.article-two.text": "Just add a trip date",
+    "auth.section.article-three.text": "Specify the purpose of the trip",
+    "auth.section.article-four.text": "Pack yourself easily",
     "header.greeting.text": "Welcome,",
     "header.greeting.guest.text": "Guest",
     "filters.type.header.text": "Type of the trip",
