Auth page styling end

--- a/src/assets/i18n/En.json
+++ b/src/assets/i18n/En.json
@@ -1,5 +1,5 @@
 {
-    "auth.header.greetings.text": "Welcome to QuickPack App!",
+    "auth.header.greetings.text": "Packing up on any trip - it's easy!",
     "auth.header.hint.text": "Please sign in and start packing for your trip :)",
     "auth.body.facebook.text": "Sign in with FACEBOOK",
     "auth.body.google.text": "Sign in with GOOGLE",
