--- a/src/assets/i18n/Ua.json
+++ b/src/assets/i18n/Ua.json
@@ -1,5 +1,5 @@
 {
-    "auth.header.greetings.text": "Вітаємо в додатку QuickApp!",
+    "auth.header.greetings.text": "Спакуватись у будь-яку подорож - легко!",
     "auth.header.hint.text": "Будь ласка, увійдіть та почніть збиратись у подорож :)",
     "auth.body.facebook.text": "Увійти через FACEBOOK",
     "auth.body.google.text": "Увійти через GOOGLE",
