--- a/src/assets/i18n/En.json
+++ b/src/assets/i18n/En.json
@@ -28,7 +28,9 @@
     "dashboard.controls.back": "Back",
     "dashboard.controls.reset": "Reset",
     "dashboard.controls.generate":"Generate my packing list",
-    "weather.display.temperature.text": "Forecasted temperature:",
-    "weather.display.summary.text": "Forecasted weather:",
-    "weather.display.location.text": "Location:"
+    "weather.display.temperature.text": "Temperature:",
+    "weather.display.summary.text": "Weather:",
+    "weather.display.precip.text": "Precip probability:",
+    "weather.display.location.text": "Location:",
+    "generatedList.items.weight.kg": "kg"
 }
